# AUT_AP_2024_Spring

./: .gitignore  CMakeLists.txt  Makefile  README.md  board.cpp  board.h  index.html  main  main.cpp  script.js  style.css
AP1400-2-HW4/: .gitignore
AP1400-2-HW4/include/: shared_ptr.h  unique_ptr.h
AP1400-2-HW4/src/: main.cpp  unit_test.cpp
AP1400-2-HW5/: .gitignore
AP1400-2-HW5/include/: cappuccino.h  espresso_based.h  ingredient.h  mocha.h  sub_ingredients.h
AP1400-2-HW5/src/: cappuccino.cpp  espresso_based.cpp  main.cpp  mocha.cpp  unit_test.cpp
Bonus/: script.js
CPP/: main
HW1/include/: algebra.h
HW1/src/: algebra.cpp
HW2/: CMakeCache.txt  Makefile  cmake_install.cmake
HW4/: CMakeLists.txt  Makefile
HW5/: README.md
Midter/: .gitignore  README.md
Midterm/: CMakeLists.txt
Python/: context_logger.py  weather_async.py
QuoridorGame/: .gitignore  Dockerfile  LICENSE  board.cpp  board.h  main.cpp
QuoridorGame/final/1/: CMakeLists.txt  Logger.h  Move.cpp  Player.cpp
bash/: backup_script.sh
final/: README.md
include/: Bank.h  BloomFilter.h  SharedControlBlock.h  Trie.h  Utils.h  crypto.h  message.h  sub_ingredients.h
src/: Account.cpp  Bank.cpp  BloomFilter.cpp  Person.cpp  Trie.cpp  Utils.cpp  crypto.cpp  main.cpp  message.cpp  server.cpp  unit_test.cpp  user.cpp
v2/: Board.cpp  Board.h  Logger.h  Makefile  main.cpp
v3/: AStar.cpp  AStar.h  Board.cpp  Minimax.cpp  Minimax.h  Move.cpp  Move.h  Player.h  main.cpp
v4/: AStar.cpp  Board.cpp  Board.h  Makefile  Minimax.cpp  Minimax.h  Move.cpp  Player.cpp  Player.h  main.cpp
(+69 files in other folders)
